[package]
name = "fire"
version = "0.1.0"
edition = "2021"
authors = [ "Vivian" ]

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
base64 = "0.22"
bincode = "1.3"
eframe = { version = "0.29", features = ["persistence", "ron", "serde"] }
egui = "0.29"
env_logger = "0.10"
humantime = "2.1"
humantime-serde = "1.1"
serde = "1"
serde_json = "1.0"
serde_with = "3.11"
ureq = "2.10.1"
